--- a/Traductor/src/app/components/traductor/traductor.page.html
+++ b/Traductor/src/app/components/traductor/traductor.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-buttons slot="end">
+    <ion-buttons slot="end" (click)="perfil()">
       <!-- Botón con icono de perfil -->
       <ion-button>Perfil
         <ion-icon slot="icon-only" name="person-circle-outline"></ion-icon>
