Implementación de aprender y sonidos

--- a/Traductor/src/app/components/traductor/traductor.page.html
+++ b/Traductor/src/app/components/traductor/traductor.page.html
@@ -29,7 +29,7 @@
         <ion-row>
           <!-- Botón Sonidos -->
           <ion-col size="12">
-            <ion-button expand="block" color="success" shape="round" size="large">
+            <ion-button expand="block" color="success" shape="round" size="large" (click)="sonidos()">
               Sonidos
             </ion-button>
           </ion-col>
@@ -38,7 +38,7 @@
         <ion-row>
           <!-- Botón Desafíos -->
           <ion-col size="12">
-            <ion-button expand="block" color="warning" shape="round" size="large">
+            <ion-button expand="block" color="warning" shape="round" size="large" (click)="desafios()">
               Desafíos
             </ion-button>
           </ion-col>
